Fixed scrollbar in BurgerIngredients Component

--- a/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -13,6 +13,13 @@
   gap: 16px;
 }
 
+.burgerConstructorListContainer {
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .totalPriceContainer {
   display: flex;
   gap: 40px;
